--- a/Gobot/Gobot/Content/Bet.scss
+++ b/Gobot/Gobot/Content/Bet.scss
@@ -37,7 +37,7 @@ $height: 100px;
         height: $height;
         width: 200px;
         background: no-repeat center;
-
+        background-size: 100%;
     }
     h1, h4 { text-transform: uppercase; }
     h4 { line-height: 14px; }
@@ -118,6 +118,8 @@ input[type=number]::-webkit-outer-spin-button {
 
 $betH: 300px;
 #bet_chooseTeam {
+    border-top: 4px solid $infoBgColor;
+    top: -4px;
     height: $betH;
 
     > div:not(.separator) {
@@ -127,13 +129,36 @@ $betH: 300px;
         height: 100%;
         width: 50%;
         background: no-repeat center;
+        background-size: 100%;
         cursor: pointer;
+
+        > h1 {
+            display: block;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 995 !important;
+            opacity: 0;
+            color: white;
+            background-color: rgba(0,0,0,0.85);
+            line-height: $betH;
+            font-size: 60px !important;
+        }
     }
         > div:not(.separator):hover {
-            background-size: 150%;
+            background-size: 120%;
             transition: 0.5s;
+
+            > h1 { opacity: 1; }
         }
 
+    
+}
+
+#bet_chooseTeam, #bet_placeBet, #getCredits {
+    margin-bottom: 6px;
     > .separator {
             position: absolute;
             height: 100%;
@@ -153,47 +178,148 @@ $betH: 300px;
         }
     }
 }
+    #bet_placeBet > .separator.left { left: calc(40% - 2px) !important; }
+    #bet_placeBet > .separator.right { left: calc(60% - 2px) !important; }
 
 #bet_placeBet {
+    border-top: 4px solid $infoBgColor;
+    top: -4px;
     height: $betH;
     
     > .teamImg {
         position: relative;
-        float: left;
         display: block;
+        float: left;
         height: 100%;
         width: 40%;
         background: no-repeat center;
-        cursor: pointer;
+        background-size: 100%;
+        cursor: default;
     }
 
     > form {
-        > div:not(.betSelector) {
-            > h2:first-of-type {
+        float: left;
+        width: 60%;
 
+        > div:not(.betSelector) {
+            > h2 {
+                display: block;
+                width: auto;
+                float: left;
+                left: 0;
+                text-transform: uppercase;
+                text-align: right;
+                color: $grey;
+            }
+            > h2:first-of-type {
+                width: 50%;
+                text-align: right;
+                right: 10px;
             }
             > h2:last-of-type {
-
+                clear: right;
+                margin-left: 10px;
             }
         }
 
         > input, > a {
-
+            position: absolute;
+            float: left;
+            clear: both;
+            height: 80px;
+            width: 60%;
+            bottom: 0;
+            font: italic 900 40px $font;
+            line-height: 80px;
+            color: $grey;
+            text-transform: uppercase;
+            cursor: pointer;
+            background-color: transparent;
         }
+            > input.left, > a.left { left: 0; }
+            > input.right, > a.right { left: 40%; }
+
+            > input:hover {
+                color: $darkerGrey;
+                background-color: $green;
+                border-color: $green;
+            }
+            > a:hover {
+                color: $darkerGrey;
+                background-color: $grey;
+                border-color: $grey;
+            }
     }
+
+    > form > div:first-of-type { margin-top: 25px; }
 }
     .betSelector {
-        > input {
+        position: relative;
+        float: left;
+        clear: both;
+        width: auto;
+        margin-top: 20px;
 
+        > input {
+            float: left;
+            height: 50px;
+            width: 45%;
+            border: 0;
+            padding: 10px 0;
+            text-indent: 20px;
+            font: 400 40px $font;
         }
 
         > div {
-
+            float: left;
+            position: relative;
+            width: 70px;
+            height: 70px;
+            cursor: pointer;
+            background-position: center !important;
+            background-size: 25px 25px !important; 
+            background-repeat: no-repeat !important;
+            opacity: 0.8;
         }
             > .sub {
-
+                background: $red url(/Images/removeBet.png);
             }
             > .add {
-
+                background: $green url(/Images/addBet.png);
             }
+
+            > .sub:hover, > .add:hover { opacity: 1; transition: 0.3s; background-size: 29px !important; }
+    }
+
+    h6 {
+        font: italic 900 60px $font;
+        color: $off-white;
+        text-transform: uppercase;
+        width: 100%;
+        text-align: center;
+        margin: 90px 0 70px 0;
+    }
+
+    #header {
+        background-color: $darkGrey;
+    }
+
+    #getCredits {
+        margin-bottom: 25px;
+        background-color: $darkGrey;
+
+        > a {
+            float: left;
+            width: 50%;
+            background-color: $infoBgColor;
+
+            > h1 { text-transform: uppercase; margin: 50px 0; }
+        }
+
+        > a:first-of-type   { > h1 { color: $menuColor; } }
+            > a:first-of-type:hover   { background-color: $menuColor; > h1 { color: $infoBgColor; } }
+        > a:last-of-type    { > h1 { color: $off-white; } }
+            > a:last-of-type:hover    { background-color: $off-white; > h1 { color: $infoBgColor; }  }
+
+        > .separator { background-color: $infoBgColor; > div { background-color: $infoBgColor; } }
     }
