--- a/Gobot/Gobot/Views/Bet/Index.cshtml
+++ b/Gobot/Gobot/Views/Bet/Index.cshtml
@@ -22,94 +22,47 @@
         {
             foreach (Gobot.Models.Match m in (List<Gobot.Models.Match>)ViewBag.Matches)
             {
-                <div class="info">
-                    <div class="time">@m.Date.TimeOfDay.ToString("HH:mm")</div>
-
-                    <div class="team1">
-                        <img src="~/Images/@(m.Teams[0].Name).png" />
-                        <div>
-                            <h1>@m.Teams[0].Name</h1>
-                            <h2>5000$</h2>
-                        </div>
-                    </div>
-                    <div class="vs"><h1>VS</h1></div>
-                    <div class="team2">
-                        <div><img src="~/Images/@(m.Teams[1].Name).png" /></div>
-                        <div>
-                            <h1>@m.Teams[1].Name</h1>
-                            <h2>5000$</h2>
-                        </div>
-                    </div>
-
-                    <div class="manageBet">
-                        @{
-                            // if user placed bet
-                            if (true)
-                            {
-                                <div class="create"></div>
-                            }
-                            else
-                            {
-                                <div class="remove"></div>
-                                <div class="edit"></div>
-                            }
-                        }
-                    </div>
-                </div>
+                
             }
         }
         else
         {
-            <div class="noMatch">
-                <h1>Aucune partie à venir. Réessayez plus tard.</h1>
+            <div class="info" id="header">
+                <h6>Aucune partie à venir. Réessayez plus tard.</h6>
             </div>
         }
     }*@
 
-<div class="info">
-    <div class="time sqr"><h3>12:00</h3></div>
+<div class="info" id="header">
+    <h6>Misez sur les parties à venir!</h6>
+</div>
 
-    <div class="team team1">
-        <div class="img" style="background-image: url(/Images/csgo.jpg);"></div>
-        <div class="text">
-            <h1>Cloud6</h1>
-            <h4 class="grey">Mise Totale<offw> 5000</offw>GC</h4>
-        </div>
-    </div>
-    <div class="vs"><h1>VS</h1></div>
-    <div class="team team2">
-        <div class="text">
-            <h1>LRG</h1>
-            <h4 class="grey">Mise Totale<offw> 5000</offw>GC</h4>
-        </div>
-        <div class="img" style="background-image: url(/Images/csgo.jpg);"></div>
-    </div>
-
-    <div class="manageBet">
-        @{
-            // if user placed bet
-            if (true)
-            {
-                <div class="create sqr"><div><h2>Miser</h2></div></div>
-            }
-            else
-            {
-                <div class="remove sqr"><div><h2>Retirer</h2></div></div>
-                <div class="edit sqr"><div><h2>Modifier</h2></div></div>
-            }
-        }
-    </div>
+<div class="info" id="getCredits">
+    <a href="#"><h1>Acheter plus de crédits</h1></a>
+    <div class="separator"><div></div></div>
+    <a href="#"><h1>Visionner une publicité</h1></a>
 </div>
 
 <div class="info">
     <div class="time sqr"><h3>12:00</h3></div>
 
     <div class="team team1">
-        <div class="img" style="background-image: url(/Images/csgo.jpg);"></div>
+        <div class="img" style="background-image: url(/Images/cloud6.png);"></div>
         <div class="text">
-            <h1 style="color: #51c24b !important;">Cloud6</h1>
-            <h4 class="grey">Votre mise <offw class="green">500</offw>GC</h4>
-            <h4 class="grey">Mise Totale <offw class="green">5000</offw>GC</h4>
+            @{
+                // if user placed bet
+                if (false)
+                {
+                    <h1><green>CLOUD6</green></h1>
+                    <h4 class="grey">Mise Totale<green> 5000</green>GC</h4>
+                    <h4 class="grey">Votre mise<green> 500</green>GC</h4>
+                }
+                else
+                {
+                    <h1>CLOUD6</h1>
+                    <h4 class="grey">Mise Totale<offw> 5000</offw>GC</h4>
+                }
+            }
         </div>
     </div>
     <div class="vs"><h1>VS</h1></div>
@@ -118,7 +71,7 @@
             <h1>LRG</h1>
             <h4 class="grey">Mise Totale<offw> 5000</offw>GC</h4>
         </div>
-        <div class="img" style="background-image: url(/Images/csgo.jpg);"></div>
+        <div class="img" style="background-image: url(/Images/lrg.png);"></div>
     </div>
 
     <div class="manageBet">
@@ -126,45 +79,63 @@
             // if user placed bet
             if (false)
             {
-                <div class="create sqr"><div><h2>Miser</h2></div></div>
+                <div class="remove sqr"><div><h2>Retirer</h2></div></div>
+                <div class="edit sqr"><div><h2>Modifier</h2></div></div>
             }
             else
             {
-                <div class="remove sqr"><div><h2>Retirer</h2></div></div>
-                <div class="edit sqr"><div><h2>Modifier</h2></div></div>
+                <div class="create sqr"><div><h2>Miser</h2></div></div>
             }
         }
     </div>
 </div>
 
-@*<div class="info" id="bet_chooseTeam">
-    <div style="background-image: url(/Images/csgo.jpg)"></div>
-    <div class="separator"><div class="square"></div></div>
-    <div style="background-image: url(/Images/csgo.jpg)"></div>
-</div>
+<div class="info">
+    <div class="time sqr"><h3>12:00</h3></div>
 
-<div class="info" id="bet_placeBet">
-    <div class="smaller" style="background-image: url(/Images/csgo.jpg)"></div>
-    <div class="separator"><div class="square"></div></div>
-    @using (Html.BeginForm())
-    {
-        <div>
-            <h4>Crédits disponibles</h4><h4><orange class="baseGC">4500</orange> GC</h4>
+    <div class="team team1">
+        <div class="img" style="background-image: url(/Images/cloud6.png);"></div>
+        <div class="text">
+            @{
+                // if user placed bet
+                if (true)
+                {
+                    <h1><green>CLOUD6</green></h1>
+                    <h4 class="grey">Mise Totale<green> 5000</green>GC</h4>
+                    <h4 class="grey">Votre mise<green> 500</green>GC</h4>
+                }
+                else
+                {
+                    <h1>CLOUD6</h1>
+                    <h4 class="grey">Mise Totale<offw> 5000</offw>GC</h4>
+                }
+            }
         </div>
-        <div>
-            <h4>-</h4><h4><red class="deductGC">700</red> GC</h4>
+    </div>
+    <div class="vs"><h1>VS</h1></div>
+    <div class="team team2">
+        <div class="text">
+            <h1>LRG</h1>
+            <h4 class="grey">Mise Totale<offw> 5000</offw>GC</h4>
         </div>
-        <div>
-            <h4>=</h4><h4 class="remainGC">3800<white>GC</white></h4>
-        </div>
-        <div class="betSelector">
-            <div class="sub"></div>
-            <input type="number" />
-            <div class="add"></div>
-        </div>
-        <a href="#">Ajouter des crédits</a>
-    }
-</div>*@
+        <div class="img" style="background-image: url(/Images/lrg.png);"></div>
+    </div>
+
+    <div class="manageBet">
+        @{
+            // if user placed bet
+            if (true)
+            {
+                <div class="remove sqr"><div><h2>Retirer</h2></div></div>
+                <div class="edit sqr"><div><h2>Modifier</h2></div></div>
+            }
+            else
+            {
+                <div class="create sqr"><div><h2>Miser</h2></div></div>
+            }
+        }
+    </div>
+</div>
 
 @section Scripts {
     <script>
@@ -189,10 +160,14 @@
         $(document).on("click", ".manageBet > .create", function () {
             $("#bet_chooseTeam").remove();
             $("#bet_placeBet").remove();
+
+            var teamNames = [];
+            $(this).closest('.info').find(' > .team > .text > h1').each(function () { teamNames.push($(this).text()); });
+
             $('<div class="info" id="bet_chooseTeam"></div>').insertAfter($(this).closest(".info"));
-            $("#bet_chooseTeam").append('<div style="background-image: url(/Images/csgo.jpg)"></div>');
+            $("#bet_chooseTeam").append('<div style="background-image: url(/Images/' + teamNames[0].toLowerCase() + '.png)"><h1>' + teamNames[0].toUpperCase() + '</h1></div>');
             $("#bet_chooseTeam").append('<div class="separator"><div class="square"></div></div>');
-            $("#bet_chooseTeam").append('<div style="background-image: url(/Images/csgo.jpg)"></div>');
+            $("#bet_chooseTeam").append('<div style="background-image: url(/Images/' + teamNames[1].toLowerCase() + '.png)"><h1>' + teamNames[1].toUpperCase() + '</h1></div>');
             onResize();
         });
 
@@ -202,50 +177,116 @@
 
         $(document).on("click", "#bet_chooseTeam > div:not(.separator)", function () {
             let selectedTeam = $(this).is(':first-child') ? 1 : 2;
+            let teamName = $(this).find("> h1").text();
             let teamId = $(this).parent().prev().find(".team" + selectedTeam).attr("id");
-            createBetForm($(this).parent(), teamId, selectedTeam);
+
+            createBetForm($(this).parent(), teamId, selectedTeam, teamName);
         });
+
+        $(document).on("click", ".betSelector > .sub", function () {
+            changeBetValue($(this), -1);
+            changeCoinsValue();
+            posCreditsInfo();
+            changeSubmit();
+        });
+        $(document).on("click", ".betSelector > .add", function () {
+            changeBetValue($(this), 1);
+            changeCoinsValue();
+            posCreditsInfo();
+            changeSubmit();
+        });
+        $(document).on("input", ".betSelector > input", function () {
+            changeCoinsValue();
+            posCreditsInfo();
+
+            $(this).attr("value", $(this).val());
+            changeSubmit();
+        });
+        $(document).on("keypress", ".betSelector > input", function (e) {
+            if (e.which != 8 && e.which != 0 && (e.which < 48 || e.which > 57))
+                return false;
+        });
+
+        function changeSubmit() {
+            var pos = $("#bet_placeBet > .teamImg").is(':first-child') ? 1 : 2;
+            if (parseInt($(".remainGC").text()) < 0 && $("#bet_placeBet > form > a").length == 0) {
+                $("#bet_placeBet > form > input").remove();
+                $("#bet_placeBet > form").append('<a class="' + (pos == 1 ? 'right' : 'left') + '" href="#">Ajouter des crédits</a>');
+            }
+            else if (parseInt($(".remainGC").text()) >= 0 && $("#bet_placeBet > form > input").length == 0) {
+                $("#bet_placeBet > form > a").remove();
+                $("#bet_placeBet > form").append('<input class="' + (pos == 1 ? 'right' : 'left') + '" type="submit" value="Confirmer"></input>');
+            }
+        }
+        function changeCoinsValue() {
+            var deduct = $(".betSelector > input").val();
+            $(".deductGC").text(deduct.length == 0 ? 0 : deduct);
+            $(".remainGC").text(parseInt($(".baseGC").text()) - $(".betSelector > input").val());
+        }
+        function changeBetValue(e, change) {
+            var input = e.parent().find("input");
+            var val = input.attr("value").length == 0 ? 0 : parseInt(input.attr("value"));
+            var max = parseInt(e.closest("form").find(".baseGC").text());
+
+            if (change < 0 ? val > 0 : val < parseInt(input.attr("max"))) {
+                input.attr("value", (val + change).toString());
+                input.val((val + change).toString());
+            }
+        }
 
         $(".manageBet > .edit").click(function () {
             let teams = $(this).closest(".info").find("> .team");
             var teamId;
             var teamNum = 1;
-           
+            var teamName;
+
+            var i = 1;
             teams.each(function () {
                 let count = $(this).find("h4").length;
-                if (count == 2) 
+                if (count == 2) {
+                    teamNum = i;
+                    teamName = $(this).find("> .text > h1 > green").text();
                     teamId = $(this).attr("id");
+                }
+                i++;
             });
 
-            createBetForm($(this).closest(".info"), teamId);
+            createBetForm($(this).closest(".info"), teamId, teamNum, teamName);
             onResize();
         });
 
-        function createBetForm(e, id, pos) {
+        function createBetForm(e, id, pos, teamName) {
             $("#bet_placeBet").remove();
             $('<div class="info" id="bet_placeBet"></div>').insertAfter(e);
             $("#bet_chooseTeam").remove();
 
-            if (pos == 1)
-                $("#bet_placeBet").append('<div class="teamImg" style="background-image: url(/Images/csgo.jpg)"></div>');
+            if (pos == 1) {
+                $("#bet_placeBet").append('<div class="teamImg left" style="background-image: url(/Images/' + teamName.toLowerCase() + '.png)"></div>');
+                $("#bet_placeBet").append('<div class="separator left"><div class="square"></div></div>');
+            }
 
-            $("#bet_placeBet").append('<div class="separator"><div class="square"></div></div>');
             $("#bet_placeBet").append('<form action="/" method="post"></form>');
-            $("#bet_placeBet > form").append('<div><h2>Crédits disponibles</h2><h2><orange class="baseGC">4500</orange> GC</h2></div>');
-            $("#bet_placeBet > form").append('<div><h2>-</h2><h2><red class="deductGC">700</red> GC</h2></div>');
+            $('#bet_placeBet > form').append('<input type="hidden" name="teamId" value="' + id + '"/>');
+            $("#bet_placeBet > form").append('<div><h2>Crédits disponibles</h2><h2><white class="baseGC">4500</white> <orange>GC</orange></h2></div>'); // Available credits
+            $("#bet_placeBet > form").append('<div><h2>-</h2><h2><red class="deductGC">0</red> <orange style="visibility: hidden;">GC</orange></h2></div>'); // Deducted credits
+            $("#bet_placeBet > form").append('<div><h2>=</h2><h2><white class="remainGC">0</white> <orange>GC</orange></h2></div>'); // Remaining credits
             $("#bet_placeBet > form").append('<div class="betSelector"></div>');
-            $("#bet_placeBet > form > .betSelector").append('<div class="sub"></div><input type="number" /><div class="add"></div>');
-            $("#bet_placeBet > form").append('<a href="#">Ajouter des crédits</a>');
+            $("#bet_placeBet > form > .betSelector").append('<div class="sub"></div><input type="number" value="0" max="9999999" step="1"/><div class="add"></div>');
+            $("#bet_placeBet > form").append('<input class="' + (pos == 1 ? 'right' : 'left') + '" type="submit" value="Confirmer"></input>');
 
-            if (pos == 2)
-                $("#bet_placeBet").append('<div class="teamImg" style="background-image: url(/Images/csgo.jpg)"></div>');
+            if (pos == 2) {
+                $("#bet_placeBet").append('<div class="teamImg" style="background-image: url(/Images/' + teamName.toLowerCase() + '.png)"></div>');
+                $("#bet_placeBet").append('<div class="separator right"><div class="square"></div></div>');
+            }
 
             onResize();
+            posCreditsInfo();
         }
 
         function onResize() {
             resizeInfo();
             h_align_window($(".info"));
+            h_align_margin($(".betSelector"), $("#bet_placeBet > form"), getWidthOfChilds($(".betSelector")));
 
             $(".info > div").each(function () {
                 if ($(this).children().children().length > 0 && $(this).children().height() == $(this).height())
@@ -266,6 +307,24 @@
 
                 $(this).find(".team").css("width", ($(".info").width() - total) / 2);
             });
+        }
+
+        function posCreditsInfo() {
+            var s = "#bet_placeBet > form > div > h2:last-of-type";
+
+            $(s).css("width", "auto");
+            var longest = 0;
+            $(s).each(function () {
+                if ($(this).width() > longest)
+                    longest = $(this).width();
+            });
+
+            $(s).css("width", longest);
+
+            if (parseInt($(".remainGC").text()) < 0)
+                $(".remainGC").addClass("red");
+            else
+                $(".remainGC").removeClass("red");
         }
     </script>
 }
