--- a/Gobot/Gobot/Views/Shared/_Layout.cshtml
+++ b/Gobot/Gobot/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
         <a id="gagueure" href="@Url.Action("Index", "Bet")">
             <div style="background-image: url(@Url.Content("~/Images/bet.png"))"></div>
         </a>
-        <a id="équipes" href="#">
+        <a id="équipes" href="@Url.Action("Teams", "Stats")">
             <div style="background-image: url(@Url.Content("~/Images/teams.png"))"></div>
         </a>
         @*<a id="inventaire" href="#">
