--- a/Gobot/Gobot/Content/Bet.css
+++ b/Gobot/Gobot/Content/Bet.css
@@ -59,6 +59,16 @@ img {
 .offw, offw {
   color: #eeeeee; }
 
+#header {
+  background-color: #323232; }
+  #header h6 {
+    font: italic 900 60px Lato, Arial, sans-serif;
+    color: #eeeeee;
+    text-transform: uppercase;
+    width: 100%;
+    text-align: center;
+    margin: 90px 0 70px 0; }
+
 #error_overlay, #js_error {
   position: fixed;
   top: 0;
@@ -429,28 +439,21 @@ input[type=number]::-webkit-outer-spin-button {
     height: 70px;
     cursor: pointer;
     background-position: center !important;
-    background-size: 25px 25px !important;
+    background-size: 25px 14px !important;
     background-repeat: no-repeat !important;
     opacity: 0.8; }
   .betSelector > .sub {
-    background: #963434 url(/Images/removeBet.png); }
+    background: #963434 url(/Images/sortDown.png); }
   .betSelector > .add {
-    background: #51c24b url(/Images/addBet.png); }
+    background: #51c24b url(/Images/sortUp.png); }
   .betSelector > .sub:hover, .betSelector > .add:hover {
     opacity: 1;
     transition: 0.3s;
-    background-size: 29px !important; }
-
-h6 {
-  font: italic 900 60px Lato, Arial, sans-serif;
-  color: #eeeeee;
-  text-transform: uppercase;
-  width: 100%;
-  text-align: center;
-  margin: 90px 0 70px 0; }
-
-#header {
-  background-color: #323232; }
+    background-size: 29px 16px !important; }
+  .betSelector > .add:active {
+    background-position: top !important; }
+  .betSelector > .sub:active {
+    background-position: bottom !important; }
 
 #getCredits {
   margin-bottom: 25px;
@@ -477,5 +480,6 @@ h6 {
   #getCredits > .separator {
     background-color: #232323; }
     #getCredits > .separator > div {
+      top: calc(50% - 25px) !important;
       background-color: #232323; }
 
