--- a/Gobot/Gobot/Content/Menu.css
+++ b/Gobot/Gobot/Content/Menu.css
@@ -60,6 +60,16 @@ img {
 .offw, offw {
   color: #eeeeee; }
 
+#header {
+  background-color: #323232; }
+  #header h6 {
+    font: italic 900 60px Lato, Arial, sans-serif;
+    color: #eeeeee;
+    text-transform: uppercase;
+    width: 100%;
+    text-align: center;
+    margin: 90px 0 70px 0; }
+
 #error_overlay, #js_error {
   position: fixed;
   top: 0;
