--- a/Gobot/Gobot/Views/Home/Index.cshtml
+++ b/Gobot/Gobot/Views/Home/Index.cshtml
@@ -45,10 +45,7 @@
                 Connectez-vous pour profiter de tout les fonctionnalités de Gobot. Si vous n'avez pas de compte, <a href="@Url.Action("Register", "Account")">créez-le</a>, ça prend moins d'une minute et c'est gratuit!
             </h2>
             <a href="@Url.Action("Register", "Account")">S'INSCRIRE</a>
-            <div class="separator">
-                <div class="line"></div>
-                <div class="diamond"></div>
-            </div>
+            @*<div class="separator"><div></div></div>*@
         </div>
         <div id="login">
             @using (Html.BeginForm())
