--- a/Gobot/Gobot/Content/Teams.scss
+++ b/Gobot/Gobot/Content/Teams.scss
@@ -2,8 +2,9 @@
 
 $teamH: 250px;
 .teams {
-    max-width: $teamH * 5 + 6px;
-    margin: 0 auto;
+    position: relative;
+    width: auto;
+    height: auto;
     padding-left: 50px;
     padding-right: 50px;
 }
@@ -13,15 +14,14 @@ $teamH: 250px;
     height: $teamH;
     width: $teamH;
     border: 1px solid $grey;
-    border-left: 0;
     background-color: $infoBgColor;
     cursor: pointer;
 
     .overlay {
         position: relative;
-        top: 50%;
-        left: 50%;
-        width: 0;
+        top: 100%;
+        left: 0;
+        width: 100%;
         height: 0;
         background-color: rgba(0,0,0,0.85);
         opacity: 0;
@@ -40,20 +40,21 @@ $teamH: 250px;
     }
 
     .triangle {
-        position: relative;
+        position: absolute;
         top: 100%;
+        left: calc(50% - 25px);
+        width: 50px;
+        height: 50px;
         -webkit-clip-path: polygon(50% 50%, 0 0, 100% 0);
         clip-path: polygon(50% 50%, 0 0, 100% 0);
-        border: 1px solid $grey;
-        border-top: 0 !important;
+        background-color: $grey;
     }
 }
     .team:hover {
         > .overlay {
             > h1 { opacity: 1; transition: 1s; }
-            left: 0;
+
             top: 0;
-            width: 100%;
             height: 100%;
             opacity: 1;
             transition: 0.3s;
@@ -97,7 +98,3 @@ $teamH: 250px;
 .acc { background-image: url('/Images/accuracy.png') }
 .r-time { background-image: url('/Images/reactionTime.png') }
 .kd { background-image: url('/Images/killDeath.png') }
-
-.leftBox {
-    border-left: 1px solid $grey;
-}
