--- a/Gobot/Gobot/Content/Menu.css
+++ b/Gobot/Gobot/Content/Menu.css
@@ -132,6 +132,36 @@ img {
       height: 120px !important;
       margin-left: calc(50% - 120px /2) !important; } }
 
+.info button, .info a, .info h1, .info h2, .info h3, .info h4, .info h5, .h button, .h a, .h h1, .h h2, .h h3, .h h4, .h h5 {
+  position: relative;
+  display: block;
+  text-align: center; }
+
+.info h1, .info h2, .info h3, .info h4, .info h5, .h h1, .h h2, .h h3, .h h4, .h h5 {
+  font: italic 900 40px Lato, Arial, sans-serif;
+  color: #eeeeee;
+  padding: 0;
+  margin: 0; }
+
+.info h1, .h h1 {
+  font-size: 36px;
+  line-height: 30px; }
+
+.info h2, .h h2 {
+  font-size: 24px; }
+
+.info h3, .h h3 {
+  font-size: 18px; }
+
+.info h4, .h h4 {
+  font: 400 16px Lato, Arial, sans-serif;
+  padding: 0;
+  margin: 0; }
+
+.info h5, .h h5 {
+  font: 400 14px Lato, sans-serif;
+  color: white; }
+
 .info {
   position: relative;
   float: left;
@@ -141,29 +171,6 @@ img {
   height: auto;
   background-color: #232323;
   margin: 2px auto; }
-  .info button, .info a, .info h1, .info h2, .info h3, .info h4, .info h5 {
-    position: relative;
-    display: block;
-    text-align: center; }
-  .info h1, .info h2, .info h3, .info h4, .info h5 {
-    font: italic 900 40px Lato, Arial, sans-serif;
-    color: #eeeeee;
-    padding: 0;
-    margin: 0; }
-  .info h1 {
-    font-size: 36px;
-    line-height: 30px; }
-  .info h2 {
-    font-size: 24px; }
-  .info h3 {
-    font-size: 18px; }
-  .info h4 {
-    font: 400 16px Lato, Arial, sans-serif;
-    padding: 0;
-    margin: 0; }
-  .info h5 {
-    font: 400 14px Lato, sans-serif;
-    color: white; }
 
 @media screen and (max-width: 1325px) {
   .info #rep > h2 {
