--- a/Gobot/Gobot/Content/Teams.scss
+++ b/Gobot/Gobot/Content/Teams.scss
@@ -52,7 +52,7 @@ $teamH: 250px;
 }
     .team:hover {
         > .overlay {
-            > h1 { opacity: 1; transition: 1s; }
+            > h1 { opacity: 1; transition: 0.3s; transition-delay: 0.2s; }
 
             top: 0;
             height: 100%;
@@ -66,6 +66,30 @@ $teamH: 250px;
     float: left;
     width: 100%;
     height: auto;
+    top: -1px;
+    background-color: $infoBgColor;
+    padding: 0;
+    margin: 0;
+    border: 1px solid $grey;
+
+    h6 {
+        float: left;
+        position: relative;
+        width: 50%;
+        font: italic 900 60px $font;
+        color: $off-white;
+        text-align: right;
+        right: 30px !important;
+        padding: 0;
+        margin: 55px 0 80px 0;
+    }
+    .team_matches {
+        float: left;
+        width: 50%;
+
+        > h2 { text-align: left; text-indent: 30px; }
+        > h2:first-of-type { margin-top: 45px; }
+    }
 }
 
 .players {
@@ -79,7 +103,8 @@ $teamH: 250px;
     position: relative;
     float: left;
     width: 100%;
-    max-width: $maxContainerWidth / 5;
+    max-width: $teamH * 5 / 6;
+    min-width: 200px;
 
     > h1 {
 
