Changes how information is posted in /Stats/Teams and /Bet/Index. + Finished styling of both pages.

--- a/Gobot/Gobot/Content/Bet.scss
+++ b/Gobot/Gobot/Content/Bet.scss
@@ -76,7 +76,12 @@ $height: 100px;
         padding: 0;
         margin: 0;
 
-        > div {
+        > a {
+            height: 100%;
+            width: 100%;
+        }
+
+        div {
             display: none;
             position: absolute;
             top: 0 !important;
