--- a/Gobot/Gobot/Content/Bet.css
+++ b/Gobot/Gobot/Content/Bet.css
@@ -268,14 +268,17 @@ img {
     opacity: 0.75;
     padding: 0;
     margin: 0; }
-    .manageBet > div > div {
+    .manageBet > div > a {
+      height: 100%;
+      width: 100%; }
+    .manageBet > div div {
       display: none;
       position: absolute;
       top: 0 !important;
       width: auto;
       height: 100px;
       background-color: inherit; }
-      .manageBet > div > div > h2 {
+      .manageBet > div div > h2 {
         text-transform: uppercase;
         font-weight: 400;
         width: auto;
