--- a/Gobot/Gobot/Content/Teams.css
+++ b/Gobot/Gobot/Content/Teams.css
@@ -209,9 +209,10 @@ img {
   width: 250px;
   border: 1px solid #626262;
   background-color: #232323;
-  cursor: pointer; }
+  cursor: pointer;
+  overflow: hidden; }
   .team .overlay {
-    position: relative;
+    position: absolute;
     top: 100%;
     left: 0;
     width: 100%;
@@ -219,6 +220,7 @@ img {
     background-color: rgba(0, 0, 0, 0.85);
     opacity: 0; }
     .team .overlay > h1 {
+      position: absolute;
       width: 100%;
       height: 100%;
       line-height: 250px !important;
@@ -231,12 +233,12 @@ img {
   .team .triangle {
     position: absolute;
     top: 100%;
-    left: calc(50% - 25px);
-    width: 50px;
-    height: 50px;
-    -webkit-clip-path: polygon(50% 50%, 0 0, 100% 0);
-    clip-path: polygon(50% 50%, 0 0, 100% 0);
-    background-color: #626262; }
+    left: 0;
+    width: 100%;
+    height: 26px;
+    background: url("/Images/teams_triangle.png") no-repeat center;
+    background-size: 59px/26px;
+    z-index: 999; }
 
 .team:hover > .overlay {
   top: 0;
@@ -247,6 +249,9 @@ img {
     opacity: 1;
     transition: 0.3s;
     transition-delay: 0.2s; }
+
+.allow_overflow {
+  overflow: visible; }
 
 .team_info {
   position: relative;
@@ -265,9 +270,10 @@ img {
     font: italic 900 60px Lato, Arial, sans-serif;
     color: #eeeeee;
     text-align: right;
+    text-transform: uppercase;
     right: 30px !important;
     padding: 0;
-    margin: 55px 0 80px 0; }
+    margin: 55px 0 0 0; }
   .team_info .team_matches {
     float: left;
     width: 50%; }
@@ -280,15 +286,22 @@ img {
 .players {
   position: relative;
   float: left;
-  width: 100%;
-  height: auto; }
+  height: auto;
+  margin-top: 40px; }
 
 .player {
   position: relative;
   float: left;
-  width: 100%;
-  max-width: 208.33333px;
-  min-width: 200px; }
+  width: auto;
+  padding: 20px 40px 40px 40px;
+  max-width: 208.33333px; }
+  .player > h1 {
+    text-transform: uppercase;
+    margin-bottom: 10px; }
+  .player > div > h2 {
+    font-size: 20px;
+    text-transform: uppercase;
+    text-align: left; }
 
 .acc {
   background-image: url("/Images/accuracy.png"); }
